orchestrator/k8s/networking/envoy/envoy-configmap.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: basilica-envoy-config
  namespace: basilica-system
data:
  bootstrap.yaml: |
    node:
      cluster: basilica-envoy
      id: basilica-envoy-node

    dynamic_resources:
      cds_config:
        path_config_source:
          path: /etc/envoy/dynamic/cds.yaml
          watched_directory:
            path: /etc/envoy/dynamic

    static_resources:
      listeners:
      - name: listener_http
        address:
          socket_address:
            address: 0.0.0.0
            port_value: 8080
        filter_chains:
        - filters:
          - name: envoy.filters.network.http_connection_manager
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              stat_prefix: ingress_http
              codec_type: AUTO
              # SEC-018: HTTP/1.1 security settings to prevent request smuggling
              http_protocol_options:
                accept_http_10: false
                allow_absolute_url: false
                header_key_format:
                  stateful_formatter:
                    name: preserve_case
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.http.header_formatters.preserve_case.v3.PreserveCaseFormatterConfig
              # SEC-018: Common HTTP security settings
              common_http_protocol_options:
                idle_timeout: 300s
                headers_with_underscores_action: REJECT_REQUEST
                max_headers_count: 100
                max_stream_duration: 3600s
              # SEC-018: Stream timeouts
              stream_idle_timeout: 300s
              request_timeout: 3600s
              request_headers_timeout: 60s
              rds:
                route_config_name: local_route
                config_source:
                  path_config_source:
                    path: /etc/envoy/dynamic/rds.yaml
                    watched_directory:
                      path: /etc/envoy/dynamic
              http_filters:
              - name: envoy.filters.http.dynamic_forward_proxy
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.filters.http.dynamic_forward_proxy.v3.FilterConfig
                  dns_cache_config:
                    name: dynamic_forward_proxy_cache
                    dns_lookup_family: V4_ONLY
              - name: envoy.filters.http.router
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
              # SEC-018: Security response headers
              local_reply_config:
                mappers:
                - filter:
                    status_code_filter:
                      comparison:
                        op: GE
                        value:
                          default_value: 100
                          runtime_key: local_reply_min_status
                  headers_to_add:
                  - header:
                      key: X-Content-Type-Options
                      value: nosniff
                    append_action: OVERWRITE_IF_EXISTS_OR_ADD
                  - header:
                      key: X-Frame-Options
                      value: DENY
                    append_action: OVERWRITE_IF_EXISTS_OR_ADD
                  - header:
                      key: X-XSS-Protection
                      value: "1; mode=block"
                    append_action: OVERWRITE_IF_EXISTS_OR_ADD

    # SEC-018: Admin interface bound to localhost only (not externally accessible)
    admin:
      access_log_path: /tmp/admin_access.log
      address:
        socket_address:
          address: 127.0.0.1
          port_value: 9901

  rds.yaml: |
    version_info: "1"
    resources:
    - "@type": type.googleapis.com/envoy.config.route.v3.RouteConfiguration
      name: local_route
      virtual_hosts:
      - name: user_deployments
        domains: ["*"]
        routes:
        - match:
            prefix: "/health"
          direct_response:
            status: 200
            body:
              inline_string: "healthy"
        - match:
            prefix: "/"
          route:
            cluster: dynamic_forward_proxy_cluster
            timeout: 0s
            retry_policy:
              retry_on: 5xx,connect-failure,refused-stream
              num_retries: 2

  cds.yaml: |
    version_info: "1"
    resources:
    - "@type": type.googleapis.com/envoy.config.cluster.v3.Cluster
      name: dynamic_forward_proxy_cluster
      connect_timeout: 1s
      lb_policy: CLUSTER_PROVIDED
      cluster_type:
        name: envoy.clusters.dynamic_forward_proxy
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.clusters.dynamic_forward_proxy.v3.ClusterConfig
          dns_cache_config:
            name: dynamic_forward_proxy_cache
            dns_lookup_family: V4_ONLY
